go/sqlparser/y.output

state 0
	$accept: .any_command $end 

	SELECT  shift 19
	INSERT  shift 20
	UPDATE  shift 21
	DELETE  shift 22
	SET  shift 23
	USE  shift 34
	BEGIN  shift 28
	START  shift 29
	COMMIT  shift 30
	ROLLBACK  shift 31
	REPLACE  shift 32
	ADMIN  shift 33
	CREATE  shift 24
	ALTER  shift 25
	DROP  shift 27
	RENAME  shift 26
	TRUNCATE  shift 35
	.  error

	any_command  goto 1
	command  goto 2
	select_statement  goto 3
	insert_statement  goto 4
	update_statement  goto 5
	delete_statement  goto 6
	set_statement  goto 7
	create_statement  goto 8
	alter_statement  goto 9
	rename_statement  goto 10
	drop_statement  goto 11
	begin_statement  goto 12
	commit_statement  goto 13
	rollback_statement  goto 14
	replace_statement  goto 15
	admin_statement  goto 16
	use_statement  goto 17
	truncate_statement  goto 18

state 1
	$accept:  any_command.$end 

	$end  accept
	.  error


state 2
	any_command:  command.    (1)

	.  reduce 1 (src line 200)


state 3
	command:  select_statement.    (2)
	select_statement:  select_statement.union_op select_statement 

	UNION  shift 37
	MINUS  shift 38
	EXCEPT  shift 39
	INTERSECT  shift 40
	.  reduce 2 (src line 206)

	union_op  goto 36

state 4
	command:  insert_statement.    (3)

	.  reduce 3 (src line 211)


state 5
	command:  update_statement.    (4)

	.  reduce 4 (src line 212)


state 6
	command:  delete_statement.    (5)

	.  reduce 5 (src line 213)


state 7
	command:  set_statement.    (6)

	.  reduce 6 (src line 214)


state 8
	command:  create_statement.    (7)

	.  reduce 7 (src line 215)


state 9
	command:  alter_statement.    (8)

	.  reduce 8 (src line 216)


state 10
	command:  rename_statement.    (9)

	.  reduce 9 (src line 217)


state 11
	command:  drop_statement.    (10)

	.  reduce 10 (src line 218)


state 12
	command:  begin_statement.    (11)

	.  reduce 11 (src line 219)


state 13
	command:  commit_statement.    (12)

	.  reduce 12 (src line 220)


state 14
	command:  rollback_statement.    (13)

	.  reduce 13 (src line 221)


state 15
	command:  replace_statement.    (14)

	.  reduce 14 (src line 222)


state 16
	command:  admin_statement.    (15)

	.  reduce 15 (src line 223)


state 17
	command:  use_statement.    (16)

	.  reduce 16 (src line 224)


state 18
	command:  truncate_statement.    (17)

	.  reduce 17 (src line 225)


state 19
	select_statement:  SELECT.comment_opt distinct_opt select_expression_list 
	select_statement:  SELECT.comment_opt distinct_opt select_expression_list FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	$$49: .    (49)

	.  reduce 49 (src line 411)

	comment_opt  goto 41
	$$49  goto 42

state 20
	insert_statement:  INSERT.comment_opt ignore_opt INTO dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT.comment_opt ignore_opt INTO dml_table_expression SET update_list on_dup_opt 
	$$49: .    (49)

	.  reduce 49 (src line 411)

	comment_opt  goto 43
	$$49  goto 42

state 21
	update_statement:  UPDATE.comment_opt dml_table_expression SET update_list where_expression_opt order_by_opt limit_opt 
	$$49: .    (49)

	.  reduce 49 (src line 411)

	comment_opt  goto 44
	$$49  goto 42

state 22
	delete_statement:  DELETE.comment_opt FROM dml_table_expression where_expression_opt order_by_opt limit_opt 
	$$49: .    (49)

	.  reduce 49 (src line 411)

	comment_opt  goto 45
	$$49  goto 42

state 23
	set_statement:  SET.comment_opt update_list 
	set_statement:  SET.comment_opt NAMES DEFAULT 
	set_statement:  SET.comment_opt NAMES value_expression 
	set_statement:  SET.comment_opt NAMES value_expression COLLATE value_expression 
	$$49: .    (49)

	.  reduce 49 (src line 411)

	comment_opt  goto 46
	$$49  goto 42

state 24
	create_statement:  CREATE.TABLE not_exists_opt ID force_eof 
	create_statement:  CREATE.constraint_opt INDEX sql_id using_opt ON ID force_eof 
	create_statement:  CREATE.VIEW sql_id force_eof 
	constraint_opt: .    (211)

	TABLE  shift 47
	VIEW  shift 49
	UNIQUE  shift 50
	.  reduce 211 (src line 1135)

	constraint_opt  goto 48

state 25
	alter_statement:  ALTER.ignore_opt TABLE ID non_rename_operation force_eof 
	alter_statement:  ALTER.ignore_opt TABLE ID RENAME to_opt ID 
	alter_statement:  ALTER.VIEW sql_id force_eof 
	ignore_opt: .    (202)

	VIEW  shift 52
	IGNORE  shift 53
	.  reduce 202 (src line 1113)

	ignore_opt  goto 51

state 26
	rename_statement:  RENAME.TABLE ID TO ID 

	TABLE  shift 54
	.  error


state 27
	drop_statement:  DROP.TABLE exists_opt ID 
	drop_statement:  DROP.INDEX sql_id ON ID 
	drop_statement:  DROP.VIEW exists_opt sql_id force_eof 

	TABLE  shift 55
	INDEX  shift 56
	VIEW  shift 57
	.  error


state 28
	begin_statement:  BEGIN.    (31)

	.  reduce 31 (src line 315)


state 29
	begin_statement:  START.TRANSACTION 

	TRANSACTION  shift 58
	.  error


state 30
	commit_statement:  COMMIT.    (33)

	.  reduce 33 (src line 326)


state 31
	rollback_statement:  ROLLBACK.    (34)

	.  reduce 34 (src line 332)


state 32
	replace_statement:  REPLACE.comment_opt INTO dml_table_expression column_list_opt row_list 
	replace_statement:  REPLACE.comment_opt INTO dml_table_expression SET update_list 
	$$49: .    (49)

	.  reduce 49 (src line 411)

	comment_opt  goto 59
	$$49  goto 42

state 33
	admin_statement:  ADMIN.dml_table_expression column_list_opt row_list 
	admin_statement:  ADMIN.HELP 

	ID  shift 62
	HELP  shift 61
	.  error

	dml_table_expression  goto 60

state 34
	use_statement:  USE.sql_id 

	ID  shift 64
	.  error

	sql_id  goto 63

state 35
	truncate_statement:  TRUNCATE.comment_opt table_opt dml_table_expression 
	$$49: .    (49)

	.  reduce 49 (src line 411)

	comment_opt  goto 65
	$$49  goto 42

state 36
	select_statement:  select_statement union_op.select_statement 

	SELECT  shift 19
	.  error

	select_statement  goto 66

state 37
	union_op:  UNION.    (53)
	union_op:  UNION.ALL 

	ALL  shift 67
	.  reduce 53 (src line 430)


state 38
	union_op:  MINUS.    (55)

	.  reduce 55 (src line 439)


state 39
	union_op:  EXCEPT.    (56)

	.  reduce 56 (src line 443)


state 40
	union_op:  INTERSECT.    (57)

	.  reduce 57 (src line 447)


state 41
	select_statement:  SELECT comment_opt.distinct_opt select_expression_list 
	select_statement:  SELECT comment_opt.distinct_opt select_expression_list FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	distinct_opt: .    (58)

	DISTINCT  shift 69
	.  reduce 58 (src line 452)

	distinct_opt  goto 68

state 42
	comment_opt:  $$49.comment_list 
	comment_list: .    (51)

	.  reduce 51 (src line 421)

	comment_list  goto 70

state 43
	insert_statement:  INSERT comment_opt.ignore_opt INTO dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT comment_opt.ignore_opt INTO dml_table_expression SET update_list on_dup_opt 
	ignore_opt: .    (202)

	IGNORE  shift 53
	.  reduce 202 (src line 1113)

	ignore_opt  goto 71

state 44
	update_statement:  UPDATE comment_opt.dml_table_expression SET update_list where_expression_opt order_by_opt limit_opt 

	ID  shift 62
	.  error

	dml_table_expression  goto 72

state 45
	delete_statement:  DELETE comment_opt.FROM dml_table_expression where_expression_opt order_by_opt limit_opt 

	FROM  shift 73
	.  error


state 46
	set_statement:  SET comment_opt.update_list 
	set_statement:  SET comment_opt.NAMES DEFAULT 
	set_statement:  SET comment_opt.NAMES value_expression 
	set_statement:  SET comment_opt.NAMES value_expression COLLATE value_expression 

	ID  shift 79
	NAMES  shift 75
	.  error

	column_name  goto 77
	update_list  goto 74
	update_expression  goto 76
	sql_id  goto 78

state 47
	create_statement:  CREATE TABLE.not_exists_opt ID force_eof 
	not_exists_opt: .    (200)

	IF  shift 81
	.  reduce 200 (src line 1108)

	not_exists_opt  goto 80

state 48
	create_statement:  CREATE constraint_opt.INDEX sql_id using_opt ON ID force_eof 

	INDEX  shift 82
	.  error


state 49
	create_statement:  CREATE VIEW.sql_id force_eof 

	ID  shift 64
	.  error

	sql_id  goto 83

state 50
	constraint_opt:  UNIQUE.    (212)

	.  reduce 212 (src line 1137)


state 51
	alter_statement:  ALTER ignore_opt.TABLE ID non_rename_operation force_eof 
	alter_statement:  ALTER ignore_opt.TABLE ID RENAME to_opt ID 

	TABLE  shift 84
	.  error


state 52
	alter_statement:  ALTER VIEW.sql_id force_eof 

	ID  shift 64
	.  error

	sql_id  goto 85

state 53
	ignore_opt:  IGNORE.    (203)

	.  reduce 203 (src line 1115)


state 54
	rename_statement:  RENAME TABLE.ID TO ID 

	ID  shift 86
	.  error


state 55
	drop_statement:  DROP TABLE.exists_opt ID 
	exists_opt: .    (198)

	IF  shift 88
	.  reduce 198 (src line 1103)

	exists_opt  goto 87

state 56
	drop_statement:  DROP INDEX.sql_id ON ID 

	ID  shift 64
	.  error

	sql_id  goto 89

state 57
	drop_statement:  DROP VIEW.exists_opt sql_id force_eof 
	exists_opt: .    (198)

	IF  shift 88
	.  reduce 198 (src line 1103)

	exists_opt  goto 90

state 58
	begin_statement:  START TRANSACTION.    (32)

	.  reduce 32 (src line 320)


state 59
	replace_statement:  REPLACE comment_opt.INTO dml_table_expression column_list_opt row_list 
	replace_statement:  REPLACE comment_opt.INTO dml_table_expression SET update_list 

	INTO  shift 91
	.  error


state 60
	admin_statement:  ADMIN dml_table_expression.column_list_opt row_list 
	column_list_opt: .    (188)

	'('  shift 93
	.  reduce 188 (src line 1055)

	column_list_opt  goto 92

state 61
	admin_statement:  ADMIN HELP.    (36)

	.  reduce 36 (src line 343)


state 62
	dml_table_expression:  ID.    (91)
	dml_table_expression:  ID.'.' ID 

	'.'  shift 94
	.  reduce 91 (src line 601)


state 63
	use_statement:  USE sql_id.    (37)

	.  reduce 37 (src line 348)


state 64
	sql_id:  ID.    (215)

	.  reduce 215 (src line 1145)


state 65
	truncate_statement:  TRUNCATE comment_opt.table_opt dml_table_expression 
	table_opt: .    (217)

	TABLE  shift 96
	.  reduce 217 (src line 1156)

	table_opt  goto 95

state 66
	select_statement:  select_statement.union_op select_statement 
	select_statement:  select_statement union_op select_statement.    (20)

	.  reduce 20 (src line 236)

	union_op  goto 36

state 67
	union_op:  UNION ALL.    (54)

	.  reduce 54 (src line 435)


state 68
	select_statement:  SELECT comment_opt distinct_opt.select_expression_list 
	select_statement:  SELECT comment_opt distinct_opt.select_expression_list FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 

	EXISTS  shift 114
	NULL  shift 118
	VALUES  shift 124
	ID  shift 101
	STRING  shift 115
	NUMBER  shift 116
	VALUE_ARG  shift 117
	'('  shift 106
	'~'  shift 122
	NOT  shift 105
	CASE  shift 125
	'+'  shift 120
	'-'  shift 121
	'*'  shift 99
	IF  shift 123
	.  error

	select_expression_list  goto 97
	select_expression  goto 98
	expression  goto 100
	boolean_expression  goto 102
	condition  goto 104
	value  goto 107
	value_expression  goto 103
	tuple  goto 109
	keyword_as_func  goto 112
	subquery  goto 119
	unary_operator  goto 110
	column_name  goto 108
	case_expression  goto 113
	sql_id  goto 111

state 69
	distinct_opt:  DISTINCT.    (59)

	.  reduce 59 (src line 456)


state 70
	comment_opt:  $$49 comment_list.    (50)
	comment_list:  comment_list.COMMENT 

	COMMENT  shift 126
	.  reduce 50 (src line 415)


state 71
	insert_statement:  INSERT comment_opt ignore_opt.INTO dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT comment_opt ignore_opt.INTO dml_table_expression SET update_list on_dup_opt 

	INTO  shift 127
	.  error


state 72
	update_statement:  UPDATE comment_opt dml_table_expression.SET update_list where_expression_opt order_by_opt limit_opt 

	SET  shift 128
	.  error


state 73
	delete_statement:  DELETE comment_opt FROM.dml_table_expression where_expression_opt order_by_opt limit_opt 

	ID  shift 62
	.  error

	dml_table_expression  goto 129

state 74
	set_statement:  SET comment_opt update_list.    (27)
	update_list:  update_list.',' update_expression 

	','  shift 130
	.  reduce 27 (src line 287)


state 75
	set_statement:  SET comment_opt NAMES.DEFAULT 
	set_statement:  SET comment_opt NAMES.value_expression 
	set_statement:  SET comment_opt NAMES.value_expression COLLATE value_expression 

	NULL  shift 118
	VALUES  shift 124
	DEFAULT  shift 131
	ID  shift 79
	STRING  shift 115
	NUMBER  shift 116
	VALUE_ARG  shift 117
	'('  shift 133
	'~'  shift 122
	CASE  shift 125
	'+'  shift 120
	'-'  shift 121
	IF  shift 123
	.  error

	value  goto 107
	value_expression  goto 132
	tuple  goto 109
	keyword_as_func  goto 112
	subquery  goto 119
	unary_operator  goto 110
	column_name  goto 108
	case_expression  goto 113
	sql_id  goto 111

state 76
	update_list:  update_expression.    (194)

	.  reduce 194 (src line 1083)


state 77
	update_expression:  column_name.'=' value_expression 
	update_expression:  column_name.'=' ON 

	'='  shift 134
	.  error


state 78
	column_name:  sql_id.    (162)

	.  reduce 162 (src line 929)


state 79
	column_name:  ID.'.' sql_id 
	column_name:  ID.'.' ID '.' sql_id 
	sql_id:  ID.    (215)

	'.'  shift 135
	.  reduce 215 (src line 1145)


state 80
	create_statement:  CREATE TABLE not_exists_opt.ID force_eof 

	ID  shift 136
	.  error


state 81
	not_exists_opt:  IF.NOT EXISTS 

	NOT  shift 137
	.  error


state 82
	create_statement:  CREATE constraint_opt INDEX.sql_id using_opt ON ID force_eof 

	ID  shift 64
	.  error

	sql_id  goto 138

state 83
	create_statement:  CREATE VIEW sql_id.force_eof 
	force_eof: .    (216)

	.  reduce 216 (src line 1151)

	force_eof  goto 139

state 84
	alter_statement:  ALTER ignore_opt TABLE.ID non_rename_operation force_eof 
	alter_statement:  ALTER ignore_opt TABLE.ID RENAME to_opt ID 

	ID  shift 140
	.  error


state 85
	alter_statement:  ALTER VIEW sql_id.force_eof 
	force_eof: .    (216)

	.  reduce 216 (src line 1151)

	force_eof  goto 141

state 86
	rename_statement:  RENAME TABLE ID.TO ID 

	TO  shift 142
	.  error


state 87
	drop_statement:  DROP TABLE exists_opt.ID 

	ID  shift 143
	.  error


state 88
	exists_opt:  IF.EXISTS 

	EXISTS  shift 144
	.  error


state 89
	drop_statement:  DROP INDEX sql_id.ON ID 

	ON  shift 145
	.  error


state 90
	drop_statement:  DROP VIEW exists_opt.sql_id force_eof 

	ID  shift 64
	.  error

	sql_id  goto 146

state 91
	replace_statement:  REPLACE comment_opt INTO.dml_table_expression column_list_opt row_list 
	replace_statement:  REPLACE comment_opt INTO.dml_table_expression SET update_list 

	ID  shift 62
	.  error

	dml_table_expression  goto 147

state 92
	admin_statement:  ADMIN dml_table_expression column_list_opt.row_list 

	SELECT  shift 19
	VALUES  shift 149
	.  error

	select_statement  goto 150
	row_list  goto 148

state 93
	column_list_opt:  '('.column_list ')' 

	ID  shift 79
	.  error

	column_name  goto 152
	column_list  goto 151
	sql_id  goto 78

state 94
	dml_table_expression:  ID '.'.ID 

	ID  shift 153
	.  error


state 95
	truncate_statement:  TRUNCATE comment_opt table_opt.dml_table_expression 

	ID  shift 62
	.  error

	dml_table_expression  goto 154

state 96
	table_opt:  TABLE.    (218)

	.  reduce 218 (src line 1160)


state 97
	select_statement:  SELECT comment_opt distinct_opt select_expression_list.    (18)
	select_statement:  SELECT comment_opt distinct_opt select_expression_list.FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	select_expression_list:  select_expression_list.',' select_expression 

	FROM  shift 155
	','  shift 156
	.  reduce 18 (src line 227)


state 98
	select_expression_list:  select_expression.    (60)

	.  reduce 60 (src line 461)


state 99
	select_expression:  '*'.    (62)

	.  reduce 62 (src line 471)


state 100
	select_expression:  expression.as_lower_opt 
	as_lower_opt: .    (67)

	AS  shift 159
	ID  shift 64
	.  reduce 67 (src line 495)

	as_lower_opt  goto 157
	sql_id  goto 158

state 101
	select_expression:  ID.'.' '*' 
	column_name:  ID.'.' sql_id 
	column_name:  ID.'.' ID '.' sql_id 
	sql_id:  ID.    (215)

	'.'  shift 160
	.  reduce 215 (src line 1145)


state 102
	expression:  boolean_expression.    (65)
	boolean_expression:  boolean_expression.AND boolean_expression 
	boolean_expression:  boolean_expression.OR boolean_expression 

	OR  shift 162
	AND  shift 161
	.  reduce 65 (src line 485)


state 103
	expression:  value_expression.    (66)
	condition:  value_expression.compare value_expression 
	condition:  value_expression.IN tuple 
	condition:  value_expression.NOT IN tuple 
	condition:  value_expression.LIKE value_expression 
	condition:  value_expression.NOT LIKE value_expression 
	condition:  value_expression.BETWEEN value_expression AND value_expression 
	condition:  value_expression.NOT BETWEEN value_expression AND value_expression 
	condition:  value_expression.IS NULL 
	condition:  value_expression.IS NOT NULL 
	value_expression:  value_expression.'&' value_expression 
	value_expression:  value_expression.'|' value_expression 
	value_expression:  value_expression.'^' value_expression 
	value_expression:  value_expression.'+' value_expression 
	value_expression:  value_expression.'-' value_expression 
	value_expression:  value_expression.'*' value_expression 
	value_expression:  value_expression.'/' value_expression 
	value_expression:  value_expression.'%' value_expression 

	NOT  shift 165
	BETWEEN  shift 167
	'='  shift 177
	'<'  shift 178
	'>'  shift 179
	LE  shift 180
	GE  shift 181
	NE  shift 182
	NULL_SAFE_EQUAL  shift 183
	IS  shift 168
	LIKE  shift 166
	IN  shift 164
	'|'  shift 170
	'&'  shift 169
	'+'  shift 172
	'-'  shift 173
	'*'  shift 174
	'/'  shift 175
	'%'  shift 176
	'^'  shift 171
	.  reduce 66 (src line 490)

	compare  goto 163

state 104
	boolean_expression:  condition.    (101)

	.  reduce 101 (src line 647)


state 105
	boolean_expression:  NOT.boolean_expression 

	EXISTS  shift 114
	NULL  shift 118
	VALUES  shift 124
	ID  shift 79
	STRING  shift 115
	NUMBER  shift 116
	VALUE_ARG  shift 117
	'('  shift 106
	'~'  shift 122
	NOT  shift 105
	CASE  shift 125
	'+'  shift 120
	'-'  shift 121
	IF  shift 123
	.  error

	boolean_expression  goto 184
	condition  goto 104
	value  goto 107
	value_expression  goto 185
	tuple  goto 109
	keyword_as_func  goto 112
	subquery  goto 119
	unary_operator  goto 110
	column_name  goto 108
	case_expression  goto 113
	sql_id  goto 111

state 106
	boolean_expression:  '('.boolean_expression ')' 
	tuple:  '('.value_expression_list ')' 
	subquery:  '('.select_statement ')' 

	SELECT  shift 19
	EXISTS  shift 114
	NULL  shift 118
	VALUES  shift 124
	ID  shift 79
	STRING  shift 115
	NUMBER  shift 116
	VALUE_ARG  shift 117
	'('  shift 106
	'~'  shift 122
	NOT  shift 105
	CASE  shift 125
	'+'  shift 120
	'-'  shift 121
	IF  shift 123
	.  error

	select_statement  goto 188
	boolean_expression  goto 186
	condition  goto 104
	value  goto 107
	value_expression  goto 189
	tuple  goto 109
	value_expression_list  goto 187
	keyword_as_func  goto 112
	subquery  goto 119
	unary_operator  goto 110
	column_name  goto 108
	case_expression  goto 113
	sql_id  goto 111

state 107
	value_expression:  value.    (132)

	.  reduce 132 (src line 784)


state 108
	value_expression:  column_name.    (133)

	.  reduce 133 (src line 789)


state 109
	value_expression:  tuple.    (134)

	.  reduce 134 (src line 793)


state 110
	value_expression:  unary_operator.value_expression 

	NULL  shift 118
	VALUES  shift 124
	ID  shift 79
	STRING  shift 115
	NUMBER  shift 116
	VALUE_ARG  shift 117
	'('  shift 133
	'~'  shift 122
	CASE  shift 125
	'+'  shift 120
	'-'  shift 121
	IF  shift 123
	.  error

	value  goto 107
	value_expression  goto 190
	tuple  goto 109
	keyword_as_func  goto 112
	subquery  goto 119
	unary_operator  goto 110
	column_name  goto 108
	case_expression  goto 113
	sql_id  goto 111

state 111
	value_expression:  sql_id.'(' ')' 
	value_expression:  sql_id.'(' select_expression_list ')' 
	value_expression:  sql_id.'(' DISTINCT select_expression_list ')' 
	column_name:  sql_id.    (162)

	'('  shift 191
	.  reduce 162 (src line 929)


state 112
	value_expression:  keyword_as_func.'(' select_expression_list ')' 

	'('  shift 192
	.  error


state 113
	value_expression:  case_expression.    (148)

	.  reduce 148 (src line 860)


state 114
	condition:  EXISTS.subquery 

	'('  shift 194
	.  error

	subquery  goto 193

state 115
	value:  STRING.    (165)

	.  reduce 165 (src line 943)


state 116
	value:  NUMBER.    (166)

	.  reduce 166 (src line 948)


state 117
	value:  VALUE_ARG.    (167)

	.  reduce 167 (src line 952)


state 118
	value:  NULL.    (168)

	.  reduce 168 (src line 956)


state 119
	tuple:  subquery.    (128)

	.  reduce 128 (src line 763)


state 120
	unary_operator:  '+'.    (151)

	.  reduce 151 (src line 875)


state 121
	unary_operator:  '-'.    (152)

	.  reduce 152 (src line 880)


state 122
	unary_operator:  '~'.    (153)

	.  reduce 153 (src line 884)


state 123
	keyword_as_func:  IF.    (149)

	.  reduce 149 (src line 865)


state 124
	keyword_as_func:  VALUES.    (150)

	.  reduce 150 (src line 870)


state 125
	case_expression:  CASE.value_expression_opt when_expression_list else_expression_opt END 
	value_expression_opt: .    (155)

	NULL  shift 118
	VALUES  shift 124
	ID  shift 79
	STRING  shift 115
	NUMBER  shift 116
	VALUE_ARG  shift 117
	'('  shift 133
	'~'  shift 122
	CASE  shift 125
	'+'  shift 120
	'-'  shift 121
	IF  shift 123
	.  reduce 155 (src line 895)

	value  goto 107
	value_expression  goto 196
	tuple  goto 109
	keyword_as_func  goto 112
	subquery  goto 119
	unary_operator  goto 110
	column_name  goto 108
	case_expression  goto 113
	value_expression_opt  goto 195
	sql_id  goto 111

state 126
	comment_list:  comment_list COMMENT.    (52)

	.  reduce 52 (src line 425)


state 127
	insert_statement:  INSERT comment_opt ignore_opt INTO.dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT comment_opt ignore_opt INTO.dml_table_expression SET update_list on_dup_opt 

	ID  shift 62
	.  error

	dml_table_expression  goto 197

state 128
	update_statement:  UPDATE comment_opt dml_table_expression SET.update_list where_expression_opt order_by_opt limit_opt 

	ID  shift 79
	.  error

	column_name  goto 77
	update_list  goto 198
	update_expression  goto 76
	sql_id  goto 78

state 129
	delete_statement:  DELETE comment_opt FROM dml_table_expression.where_expression_opt order_by_opt limit_opt 
	where_expression_opt: .    (99)

	WHERE  shift 200
	.  reduce 99 (src line 638)

	where_expression_opt  goto 199

state 130
	update_list:  update_list ','.update_expression 

	ID  shift 79
	.  error

	column_name  goto 77
	update_expression  goto 201
	sql_id  goto 78

state 131
	set_statement:  SET comment_opt NAMES DEFAULT.    (28)

	.  reduce 28 (src line 292)


state 132
	set_statement:  SET comment_opt NAMES value_expression.    (29)
	set_statement:  SET comment_opt NAMES value_expression.COLLATE value_expression 
	value_expression:  value_expression.'&' value_expression 
	value_expression:  value_expression.'|' value_expression 
	value_expression:  value_expression.'^' value_expression 
	value_expression:  value_expression.'+' value_expression 
	value_expression:  value_expression.'-' value_expression 
	value_expression:  value_expression.'*' value_expression 
	value_expression:  value_expression.'/' value_expression 
	value_expression:  value_expression.'%' value_expression 

	'|'  shift 170
	'&'  shift 169
	'+'  shift 172
	'-'  shift 173
	'*'  shift 174
	'/'  shift 175
	'%'  shift 176
	'^'  shift 171
	COLLATE  shift 202
	.  reduce 29 (src line 296)


state 133
	tuple:  '('.value_expression_list ')' 
	subquery:  '('.select_statement ')' 

	SELECT  shift 19
	NULL  shift 118
	VALUES  shift 124
	ID  shift 79
	STRING  shift 115
	NUMBER  shift 116
	VALUE_ARG  shift 117
	'('  shift 133
	'~'  shift 122
	CASE  shift 125
	'+'  shift 120
	'-'  shift 121
	IF  shift 123
	.  error

	select_statement  goto 188
	value  goto 107
	value_expression  goto 203
	tuple  goto 109
	value_expression_list  goto 187
	keyword_as_func  goto 112
	subquery  goto 119
	unary_operator  goto 110
	column_name  goto 108
	case_expression  goto 113
	sql_id  goto 111

state 134
	update_expression:  column_name '='.value_expression 
	update_expression:  column_name '='.ON 

	NULL  shift 118
	VALUES  shift 124
	ID  shift 79
	STRING  shift 115
	NUMBER  shift 116
	VALUE_ARG  shift 117
	'('  shift 133
	'~'  shift 122
	ON  shift 205
	CASE  shift 125
	'+'  shift 120
	'-'  shift 121
	IF  shift 123
	.  error

	value  goto 107
	value_expression  goto 204
	tuple  goto 109
	keyword_as_func  goto 112
	subquery  goto 119
	unary_operator  goto 110
	column_name  goto 108
	case_expression  goto 113
	sql_id  goto 111

state 135
	column_name:  ID '.'.sql_id 
	column_name:  ID '.'.ID '.' sql_id 

	ID  shift 207
	.  error

	sql_id  goto 206

state 136
	create_statement:  CREATE TABLE not_exists_opt ID.force_eof 
	force_eof: .    (216)

	.  reduce 216 (src line 1151)

	force_eof  goto 208

state 137
	not_exists_opt:  IF NOT.EXISTS 

	EXISTS  shift 209
	.  error


state 138
	create_statement:  CREATE constraint_opt INDEX sql_id.using_opt ON ID force_eof 
	using_opt: .    (213)

	USING  shift 211
	.  reduce 213 (src line 1140)

	using_opt  goto 210

state 139
	create_statement:  CREATE VIEW sql_id force_eof.    (41)

	.  reduce 41 (src line 370)


state 140
	alter_statement:  ALTER ignore_opt TABLE ID.non_rename_operation force_eof 
	alter_statement:  ALTER ignore_opt TABLE ID.RENAME to_opt ID 

	ORDER  shift 217
	DEFAULT  shift 215
	ID  shift 218
	ALTER  shift 214
	DROP  shift 216
	RENAME  shift 213
	.  error

	non_rename_operation  goto 212

state 141
	alter_statement:  ALTER VIEW sql_id force_eof.    (44)

	.  reduce 44 (src line 385)


state 142
	rename_statement:  RENAME TABLE ID TO.ID 

	ID  shift 219
	.  error


state 143
	drop_statement:  DROP TABLE exists_opt ID.    (46)

	.  reduce 46 (src line 396)


state 144
	exists_opt:  IF EXISTS.    (199)

	.  reduce 199 (src line 1105)


state 145
	drop_statement:  DROP INDEX sql_id ON.ID 

	ID  shift 220
	.  error


state 146
	drop_statement:  DROP VIEW exists_opt sql_id.force_eof 
	force_eof: .    (216)

	.  reduce 216 (src line 1151)

	force_eof  goto 221

state 147
	replace_statement:  REPLACE comment_opt INTO dml_table_expression.column_list_opt row_list 
	replace_statement:  REPLACE comment_opt INTO dml_table_expression.SET update_list 
	column_list_opt: .    (188)

	SET  shift 223
	'('  shift 93
	.  reduce 188 (src line 1055)

	column_list_opt  goto 222

state 148
	admin_statement:  ADMIN dml_table_expression column_list_opt row_list.    (35)

	.  reduce 35 (src line 338)


state 149
	row_list:  VALUES.tuple_list 

	'('  shift 133
	.  error

	tuple  goto 225
	tuple_list  goto 224
	subquery  goto 119

state 150
	select_statement:  select_statement.union_op select_statement 
	row_list:  select_statement.    (124)

	UNION  shift 37
	MINUS  shift 38
	EXCEPT  shift 39
	INTERSECT  shift 40
	.  reduce 124 (src line 743)

	union_op  goto 36

state 151
	column_list_opt:  '(' column_list.')' 
	column_list:  column_list.',' column_name 

	','  shift 227
	')'  shift 226
	.  error


state 152
	column_list:  column_name.    (190)

	.  reduce 190 (src line 1064)


state 153
	dml_table_expression:  ID '.' ID.    (92)

	.  reduce 92 (src line 606)


state 154
	truncate_statement:  TRUNCATE comment_opt table_opt dml_table_expression.    (38)

	.  reduce 38 (src line 354)


state 155
	select_statement:  SELECT comment_opt distinct_opt select_expression_list FROM.table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 

	ID  shift 232
	'('  shift 231
	.  error

	table_expression_list  goto 228
	table_expression  goto 229
	simple_table_expression  goto 230
	subquery  goto 233

state 156
	select_expression_list:  select_expression_list ','.select_expression 

	EXISTS  shift 114
	NULL  shift 118
	VALUES  shift 124
	ID  shift 101
	STRING  shift 115
	NUMBER  shift 116
	VALUE_ARG  shift 117
	'('  shift 106
	'~'  shift 122
	NOT  shift 105
	CASE  shift 125
	'+'  shift 120
	'-'  shift 121
	'*'  shift 99
	IF  shift 123
	.  error

	select_expression  goto 234
	expression  goto 100
	boolean_expression  goto 102
	condition  goto 104
	value  goto 107
	value_expression  goto 103
	tuple  goto 109
	keyword_as_func  goto 112
	subquery  goto 119
	unary_operator  goto 110
	column_name  goto 108
	case_expression  goto 113
	sql_id  goto 111

state 157
	select_expression:  expression as_lower_opt.    (63)

	.  reduce 63 (src line 476)


state 158
	as_lower_opt:  sql_id.    (68)

	.  reduce 68 (src line 499)


state 159
	as_lower_opt:  AS.sql_id 

	ID  shift 64
	.  error

	sql_id  goto 235

state 160
	select_expression:  ID '.'.'*' 
	column_name:  ID '.'.sql_id 
	column_name:  ID '.'.ID '.' sql_id 

	ID  shift 207
	'*'  shift 236
	.  error

	sql_id  goto 206

state 161
	boolean_expression:  boolean_expression AND.boolean_expression 

	EXISTS  shift 114
	NULL  shift 118
	VALUES  shift 124
	ID  shift 79
	STRING  shift 115
	NUMBER  shift 116
	VALUE_ARG  shift 117
	'('  shift 106
	'~'  shift 122
	NOT  shift 105
	CASE  shift 125
	'+'  shift 120
	'-'  shift 121
	IF  shift 123
	.  error

	boolean_expression  goto 237
	condition  goto 104
	value  goto 107
	value_expression  goto 185
	tuple  goto 109
	keyword_as_func  goto 112
	subquery  goto 119
	unary_operator  goto 110
	column_name  goto 108
	case_expression  goto 113
	sql_id  goto 111

state 162
	boolean_expression:  boolean_expression OR.boolean_expression 

	EXISTS  shift 114
	NULL  shift 118
	VALUES  shift 124
	ID  shift 79
	STRING  shift 115
	NUMBER  shift 116
	VALUE_ARG  shift 117
	'('  shift 106
	'~'  shift 122
	NOT  shift 105
	CASE  shift 125
	'+'  shift 120
	'-'  shift 121
	IF  shift 123
	.  error

	boolean_expression  goto 238
	condition  goto 104
	value  goto 107
	value_expression  goto 185
	tuple  goto 109
	keyword_as_func  goto 112
	subquery  goto 119
	unary_operator  goto 110
	column_name  goto 108
	case_expression  goto 113
	sql_id  goto 111

state 163
	condition:  value_expression compare.value_expression 
